tests/sksl/errors/golden/ArrayUnspecifiedDimensions.glsl
### Compilation failed:

error: 1: arrays without an explicit size must use an initializer expression
error: 2: expected 'int', but found 'float'
error: 3: expected 'int', but found 'bool'
error: 4: arrays without an explicit size must use an initializer expression
4 errors
